// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Product /> Product with Exclusive Status 1`] = `
<styled.div>
  <Grid
    fluid={true}
  >
    <GRow>
      <GCol
        xs={12}
      >
        <styled.img
          src="http://localhost:9999/images/product-1.jpg"
        />
      </GCol>
    </GRow>
    <GRow>
      <GCol
        lg={5}
        md={5}
        sm={12}
        xs={12}
      >
        <styled.div
          isExclusive={true}
          isSale={false}
        >
          Exclusive
        </styled.div>
      </GCol>
    </GRow>
    <GRow>
      <GCol
        lg={8}
        md={8}
        sm={12}
        xs={12}
      >
        <styled.div>
          Striped shirt
        </styled.div>
      </GCol>
      <GCol
        lg={4}
        md={4}
        sm={12}
        xs={12}
      >
        <styled.h2>
          $18.88
        </styled.h2>
      </GCol>
    </GRow>
  </Grid>
</styled.div>
`;

exports[`<Product /> Product with Sale Status 1`] = `
<styled.div>
  <Grid
    fluid={true}
  >
    <GRow>
      <GCol
        xs={12}
      >
        <styled.img
          src="http://localhost:9999/images/product-1.jpg"
        />
      </GCol>
    </GRow>
    <GRow>
      <GCol
        lg={5}
        md={5}
        sm={12}
        xs={12}
      >
        <styled.div
          isExclusive={false}
          isSale={true}
        >
          Sale
        </styled.div>
      </GCol>
    </GRow>
    <GRow>
      <GCol
        lg={8}
        md={8}
        sm={12}
        xs={12}
      >
        <styled.div>
          Striped shirt
        </styled.div>
      </GCol>
      <GCol
        lg={4}
        md={4}
        sm={12}
        xs={12}
      >
        <styled.h2>
          $18.88
        </styled.h2>
      </GCol>
    </GRow>
  </Grid>
</styled.div>
`;
